# makespan-minimization

./: .gitignore  Cargo.toml  README.md  run-all.py
benchmarks/: m10-n31-U1,100-s2.txt  m10-n31-U1,100-s3.txt  m10-n31-U1,100-s6.txt  m10-n31-U1,100-s9.txt  m10-n31-U100,200-s6.txt  m10-n31-U100,200-s7.txt  m10-n32-U1,100-s2.txt  m10-n32-U1,100-s6.txt  m10-n32-U100,200-s10.txt  m10-n32-U100,200-s2.txt  m10-n32-U100,200-s6.txt  m10-n32-U100,200-s9.txt  m10-n41-U1,100-s10.txt  m10-n41-U1,100-s5.txt  m10-n41-U1,100-s6.txt  m10-n41-U1,100-s8.txt  m10-n41-U1,100-s9.txt  m10-n41-U100,200-s5.txt  m10-n41-U100,200-s6.txt  m10-n42-U1,100-s3.txt  m10-n42-U1,100-s4.txt  m10-n42-U1,100-s8.txt  m10-n42-U100,200-s10.txt  m10-n42-U100,200-s2.txt  m10-n42-U100,200-s4.txt  m10-n42-U100,200-s6.txt  m10-n42-U100,200-s9.txt  m10-n51-U1,100-s1.txt  m10-n51-U1,100-s6.txt  m10-n51-U1,100-s7.txt  m10-n51-U1,100-s9.txt  m10-n51-U100,200-s1.txt  m10-n51-U100,200-s10.txt  m10-n51-U100,200-s2.txt  m10-n51-U100,200-s6.txt  m10-n51-U100,200-s7.txt  m10-n52-U1,100-s1.txt  m10-n52-U1,100-s3.txt  m10-n52-U1,100-s5.txt  m10-n52-U1,100-s6.txt  (+3020 more)
data/: m10-n32-U1,100-s1.txt  p_cmax-n5-m3-maxsize50.txt  validate-multiple-solutions-all.py  validate-multiple-solutions.py  validate-single-solution.py  validate-solution.py
python_scripts/: eval.py  opt_hinzufuegen.py  run-all-parameterized-diff.py  run-all-parameterized-diff2.py  run-all-parameterized-hyperp.py  run-all-parameterized-mixed.py  run-all-parameterized.py  run-all.py  run_all_parameterized_long2.py  start_big_eval2.py
src/: eval.py  input.rs  (+17 more)
(+15764 files in other folders)
