[package]
name = "makespan-minimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
enum-map = "2.7.1"
permutation = "0.4.1"
rand = { version = "0.8.5"}
rayon = "1.8.0"
percentage = "0.1.0"
concurrent-map = "5.0.33"
chrono = "0.4.31"
structopt = "0.3.26"
regex = "1.10.3"
atoi = "2.0.0"
rand_chacha = "0.3.1"
